--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--top menu start-->
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light sticky-top container">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt=""></a>
