--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
   <!-- books end -->
 
   <!-- map start -->
-  <div class="row mt-5 mb-5" id="map">
-    <div class="col-12">
+  <div class="mt-5 mb-5" id="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2323.71839102343!2d48.60814621584692!3d54.37962498020857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3f1b8b2d409b%3A0x15d5407b8ea01f69!2z0JvRjNCy0L7QstGB0LrQuNC5INCxLdGALCA1LCDQo9C70YzRj9C90L7QstGB0LosINCj0LvRjNGP0L3QvtCy0YHQutCw0Y8g0L7QsdC7LiwgNDMyMDYz!5e0!3m2!1sru!2sru!4v1653501464292!5m2!1sru!2sru" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </div>
